--- a/package.json
+++ b/package.json
@@ -2,23 +2,32 @@
   "name": "noto",
   "private": true,
   "type": "module",
+  "description": "",
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "format": "biome format",
+    "format:fix": "biome format --write",
     "lint": "biome lint",
-    "check": "biome check"
+    "lint:fix": "biome lint --write",
+    "check": "biome check",
+    "check:fix": "biome check --write"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.11.0",
+    "@convex-dev/react-query": "^0.1.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
+    "@tanstack/react-router-with-query": "^1.130.17",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "convex": "^1.31.2",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
