feat: commit changes

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-CONVEX_DEPLOYMENT=dev:xxxxxxx
-
-VITE_CONVEX_URL=https://xxxxxxxxx.convex.cloud
-
+# Frontend side
 VITE_AUTH0_DOMAIN=YOUR_AUTH0_APP_DOMAIN
 VITE_AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
+VITE_CONVEX_URL=https://xxxxxxxxx.convex.cloud
+AI_GATEWAY_API_KEY=YOUR_AI_GATEWAY_API_KEY
+
+# Deployment used by `npx convex dev`
+CONVEX_DEPLOYMENT=dev:xxxxxxx
+
+# Backend side, to specify in convex env variable
+AUTH0_DOMAIN=YOUR_AUTH0_APP_DOMAIN
+AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
