--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noto",
+  "name": "youtube-genius",
   "private": true,
   "type": "module",
   "description": "",
@@ -35,6 +35,7 @@
     "convex": "^1.31.2",
     "flowbite-react": "^0.12.14",
     "lucide-react": "^0.544.0",
+    "motion": "^12.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
