--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "YoutubeGenius",
+  "name": "YoutubeGenius",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "noto-logo-192.png",
+      "src": "youtube-genius-logo-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "noto-logo-512.png",
+      "src": "youtube-genius-logo-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
