feat: update building cmd

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "vite build"
+  command = "npx convex deploy --cmd 'pnpm run build'"
   dir = "dist/client"
 [dev]
   command = "pnpm run dev"
