feat: fix production error

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "YoutubeGenius",
-  "name": "YoutubeGenius",
+  "short_name": "YTGenius",
+  "name": "Youtube Genius",
   "icons": [
     {
       "src": "favicon.ico",
