--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 🧪 Formatter, Linter, Tsc & Tests
-        run: pnpm check
+        run: pnpm run ci
 
       - name: 📦 Build frontend
         run: pnpm run build
