fix: add secrets example in env file

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
 # https://dashboard.convex.prod/YOUR_PROJECT/settings/environment-variables
 # AUTH0_DOMAIN=YOUR_AUTH0_APP_DOMAIN
 # AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
+
+# PROD => Google secrets, needed on Auth0 dashboard
+# GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
+# GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET
