--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ CONVEX_DEPLOYMENT=dev:YOUR_CONVEX_DEPLOYMENT # team: YOUR_TEAM, project: YOUR_PR
 # Backend side, to specify in convex env variable
 AUTH0_DOMAIN=YOUR_AUTH0_APP_DOMAIN
 AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
+# Delete-account: Machine-to-Machine app for Auth0 Management API (must be set in Convex env)
+AUTH0_MANAGEMENT_CLIENT_ID=YOUR_AUTH0_M2M_CLIENT_ID
+AUTH0_MANAGEMENT_CLIENT_SECRET=YOUR_AUTH0_M2M_CLIENT_SECRET
 
 # Prod => Needed on Netlify
 # CONVEX_DEPLOY_KEY=prod:YOUR_CONVEX_DEPLOYMENT|YOUR_CONVEX_DEPLOY_KEY
@@ -24,6 +27,8 @@ AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
 # https://dashboard.convex.prod/YOUR_PROJECT/settings/environment-variables
 # AUTH0_DOMAIN=YOUR_AUTH0_APP_DOMAIN
 # AUTH0_CLIENT_ID=YOUR_AUTH0_APP_CLIENT_ID
+# AUTH0_MANAGEMENT_CLIENT_ID=YOUR_AUTH0_M2M_CLIENT_ID
+# AUTH0_MANAGEMENT_CLIENT_SECRET=YOUR_AUTH0_M2M_CLIENT_SECRET
 
 # PROD => Google secrets, needed on Auth0 dashboard
 # GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
