--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/react": "^3.0.3",
     "@auth0/auth0-react": "^2.11.0",
     "@convex-dev/react-query": "^0.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
@@ -38,6 +39,7 @@
     "motion": "^12.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-hotkeys-hook": "^5.2.1",
     "react-markdown": "^10.1.0",
     "tailwindcss": "^4.0.6",
